feat(firehose): revamp history
