# internal/server/v1/firehose/firehose.go
@@ -2,7 +2,6 @@ package firehose
 
 import (
 	"context"
-	"encoding/json"
 	"fmt"
 	"strings"
 
@@ -12,7 +11,8 @@ import (
 	sirenv1beta1rpc "buf.build/gen/go/gotocompany/proton/grpc/go/gotocompany/siren/v1beta1/sirenv1beta1grpc"
 	entropyv1beta1 "buf.build/gen/go/gotocompany/proton/protocolbuffers/go/gotocompany/entropy/v1beta1"
 	"github.com/go-chi/chi/v5"
-	"github.com/wI2L/jsondiff"
+	"github.com/yudai/gojsondiff"
+	"github.com/yudai/gojsondiff/formatter"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
 
@@ -78,16 +78,17 @@ type firehoseAPI struct {
 	StencilAddr string
 }
 
-func (api *firehoseAPI) getFirehose(ctx context.Context, firehoseURN string) (*models.Firehose, error) {
+func (api *firehoseAPI) getFirehose(ctx context.Context, firehoseURN string) (models.Firehose, error) {
+	var firehose models.Firehose
 	resp, err := api.Entropy.GetResource(ctx, &entropyv1beta1.GetResourceRequest{Urn: firehoseURN})
 	if err != nil {
 		st := status.Convert(err)
 		if st.Code() == codes.NotFound {
-			return nil, errFirehoseNotFound.WithCausef(st.Message())
+			return firehose, errFirehoseNotFound.WithCausef(st.Message())
 		}
-		return nil, err
+		return firehose, err
 	} else if resp.GetResource().GetKind() != kindFirehose {
-		return nil, errFirehoseNotFound
+		return firehose, errFirehoseNotFound
 	}
 
 	return mapEntropyResourceToFirehose(resp.GetResource())
@@ -100,13 +101,19 @@ func (api *firehoseAPI) makeStencilURL(sc compass.Schema) string {
 	return finalURL
 }
 
-func jsonDiff(left, right []byte) ([]byte, error) {
-	patch, err := jsondiff.CompareJSON(left, right)
+func jsonDiff(prev, current []byte) (map[string]interface{}, error) {
+	differ := gojsondiff.New()
+	diff, err := differ.Compare(prev, current)
 	if err != nil {
 		return nil, err
 	}
 
-	return json.Marshal(patch)
+	diffMap, err := formatter.NewDeltaFormatter().FormatAsJson(diff)
+	if err != nil {
+		return nil, err
+	}
+
+	return diffMap, nil
 }
 
 // Reference: https://github.com/orgs/odpf/discussions/12
